# sdl3-snake

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: colour.h.DE4FE1A14287C8FB.idx  entity.cpp.7F2FABFD522A1E0C.idx  entity.h.48AC39A8CBFC8BC5.idx  game.cpp.ADB80AAC6E5C2FB2.idx  game.h.9BF081F9D414148D.idx  game_extra.h.4E2925B239CAE775.idx  game_font.cpp.8D927282DAC7FD61.idx  game_font.h.EA4BE8F619497210.idx  main.cpp.DB094FCD7CD5F6A3.idx  player.cpp.09FA99C06864D339.idx  player.h.4F88AD1CC22CDA82.idx  position.h.088707403AED9558.idx  snake.cpp.B686D3306090107E.idx  snake.h.D7DFD6A2A05BC390.idx
.notes/: compiling.md  fixedupdate helps.html  headers.md  headers_supporting_01.html  text.md
include/: apple.h  colour.h  entity.h  game.h  game_constants.h  game_extra.h  game_font.h  player.h  position.h  snake.h
src/: apple.cpp  entity.cpp  game.cpp  game_font.cpp  main.cpp  player.cpp  snake.cpp
